# raylib-starter

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  settings.json
src/: main.cpp  settings.h
